--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,22 @@
     padding: 0;
 }
 
+/* generics */
+
+body{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+header{
+    width: 100%;
+    height: 200px;
+    background-color: #E579E6;
+    margin: 30px 0;
+}
+
+.main-container{
+    height: 500px;
+    background-color: #E1D67A;
+    margin: 15px 0;
+}
