--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    
 }
 
 /* generics */
@@ -13,6 +14,8 @@ body{
     margin: 0 auto;
 }
 
+
+/* HEADER */
 header{
     width: 100%;
     height: 200px;
@@ -20,8 +23,18 @@ header{
     margin: 30px 0;
 }
 
+/* MAIN CONTAINER */
+
 .main-container{
     height: 500px;
     background-color: #E1D67A;
-    margin: 15px 0;
+    margin: 30px 0;
+}
+
+/* BOTTOM SECTION */
+
+.bottom-section{
+    background-color: #0186FE;
+    height: 700px;
+    margin: 15px 0 5px; 
 }
