--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@
 body{
     max-width: 1200px;
     margin: 0 auto;
-}
+} 
+/* qui sono consapevole che se ci fosse un bg non andava bene */
 
 
 /* HEADER */
@@ -55,15 +56,15 @@ header{
     margin-bottom:30px; 
 }
 
-/* float section con 3 column */
+/* FLOAT SECTION CON 3 COLUMN  */
 .row { 
     margin: 30px 0;
-    height:auto; 
+    
 }
 
 .column{
     background-color: #ABCFE7 ;
-    height: 680px;
+    height: 670px;
 }
 
 main{
