--- a/css/style.css
+++ b/css/style.css
@@ -49,38 +49,36 @@ header{
 
 .bottom-section {
     background-color: #0186FE;
-    height: 800px; 
-    margin: 15px 0;  
+    height: 100%; 
+    margin: 15px 0;
+    margin-bottom: 20px;
+    padding-bottom: 30px;  
 }
 
 .mini-header {
     background-color:#ABCFE7;
     height: 70px;
-    margin-bottom:30px; 
+    /* margin-bottom:10px;  */
 }
 
 /* FLOAT SECTION CON 3 COLUMN  */
 .row { 
-    margin: 30px 0;
+    padding-top: 30px;
+}
+
+.row > div{
     
-}
-
-.column{
-    background-color: #ABCFE7 ;
-    height: 670px;
-}
-
-main{
-    width: calc(50% - 50px);
-    margin: 0 25px;
-    border-radius: 5px;
-}
-
-.side{
+    float:left; 
+    height: 300px;
+    background-color: #ABCFE7;
     width: 25%;
 }
 
+.bottom-section .row .col:nth-child(2){
+    width: calc(50% - 40px);
+    margin: 0 20px;
 
+}
 
 /* FOOTER */
 
